# Axum-OpenAPI

./: Cargo.toml  README.md  todo.md
axum-open-api/: Cargo.toml
axum-open-api-codegen/: Cargo.toml
axum-open-api-codegen/src/: err.rs  lib.rs
axum-open-api-codegen/src/codegen/: mod.rs
axum-open-api-codegen/src/compilation/: mod.rs  schema.rs
axum-open-api-codegen/src/parsing/: mod.rs
axum-open-api/src/: lib.rs
axum-open-api/tests/: test-api.yaml  test.rs
