[workspace]
members = ["axum-open-api", "axum-open-api-codegen"]

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = { version = "1.0.33" }
proc-macro2 = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.6"
oas3 = "0.4"